# cppguard

./: Cargo.toml  LICENSE  README.md
.github/workflows/: rust.yml
src/: ast.rs  main.rs  metrics.rs  reporter.rs  solid.rs
tests/: compare_lizard.py  example.cpp
