[package]
name = "cpp_guard"
version = "0.1.0"
edition = "2024"
description = "C++ code complexity analyzer using Clang AST"

[[bin]]
name = "cpp_guard"
path = "src/main.rs"

[dependencies]
clang = { version = "2.0", features = ["clang_6_0"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.0", features = ["derive"] }
colored = "2.0"
walkdir = "2.3"
